# Algebra-API

./: Dockerfile  README.md  index.mjs  package-lock.json  package.json
MathSolver/: CMakeLists.txt  Constant.cpp  Constant.hpp  Equation.cpp  Equation.hpp  Expression.cpp  Expression.hpp  Operand.cpp  Operand.hpp  OperandList.cpp  OperandList.hpp  Operation_Functions.cpp  Operation_Functions.hpp  Parser.cpp  Parser.hpp  Substitutor.cpp  Substitutor.hpp  Term.cpp  Term.hpp  Tests.hpp  Variable.cpp  Variable.hpp  main.cpp
